# libdfr-neural

./: .gitignore  CMakeLists.txt  DataLoader.cpp  DataLoader.h  Makefile  README.md  dfrNeuralLayer.cpp  dfrNeuralLayer.h  dfrNeuralLinearLayer.cpp  dfrNeuralLinearLayer.h  dfrNeuralNet.cpp  dfrNeuralNet.h  dfrNeuralReLULayer.cpp  dfrNeuralReLULayer.h  dfrNeuralRectlinLayer.cpp  dfrNeuralRectlinLayer.h  dfrNeuralSigmoidLayer.cpp  dfrNeuralSigmoidLayer.h  dfrNeuralSoftmaxLayer.cpp  dfrNeuralSoftmaxLayer.h  dfrNeuralTanhLayer.cpp  dfrNeuralTanhLayer.h  dfrNeuralTestWrapper_MNISTdigit.cpp  dfrNeuralTestWrapper_XOR.cpp  libdfr-neural.cpp  libdfr-neural.h
src/: dfrDataHandler.cpp  dfrDataHandler.h  dfrNeuralLayer.cpp  dfrNeuralLayer.h  dfrNeuralLinearLayer.cpp  dfrNeuralLinearLayer.h  dfrNeuralNet.cpp  dfrNeuralNet.h  dfrNeuralSigmoidLayer.cpp  dfrNeuralSigmoidLayer.h  dfrNeuralSoftmaxLayer.h  dfrNeuralTanhLayer.h  dfrNeuralTestWrapper_MNISTdigit.cpp  dfrNeuralTestWrapper_XOR.cpp
